# loom

./: CHANGELOG.md  CLAUDE.md  CONVENTIONS.md  Cargo.toml  LICENSE  README.md  REVIEW.md  dist-workspace.toml  release-please-config.json  release-plz.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/release-please/: config.json  manifest.json
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  publish.yml  release-plz.yml  release.yml
crates/loom-cli/: Cargo.toml
crates/loom-cli/src/: cli.rs  main.rs  tree_select.rs
crates/loom-core/: CHANGELOG.md  Cargo.toml
crates/loom-core/src/: groups.rs  lib.rs  names.rs  update.rs
crates/loom-core/src/agent/: claude_code.rs  mod.rs
crates/loom-core/src/agent/snapshots/: loom_core__agent__claude_code__tests__claude_md_full_snapshot.snap  loom_core__agent__claude_code__tests__claude_md_snapshot.snap  loom_core__agent__claude_code__tests__claude_md_with_sandbox_guidance_snapshot.snap  loom_core__agent__claude_code__tests__claude_md_with_specs_snapshot.snap  loom_core__agent__claude_code__tests__claude_md_with_workflows_snapshot.snap  loom_core__agent__claude_code__tests__mcp_json_global_servers_snapshot.snap  loom_core__agent__claude_code__tests__mcp_json_preset_overrides_global.snap  loom_core__agent__claude_code__tests__mcp_json_sse_server_snapshot.snap  loom_core__agent__claude_code__tests__settings_local_snapshot.snap  loom_core__agent__claude_code__tests__settings_sandbox_absolute_paths_converted.snap  loom_core__agent__claude_code__tests__settings_snapshot.snap  loom_core__agent__claude_code__tests__settings_with_all_features_snapshot.snap  loom_core__agent__claude_code__tests__settings_with_allow_local_binding_snapshot.snap  loom_core__agent__claude_code__tests__settings_with_bare_mcp_tool_snapshot.snap  loom_core__agent__claude_code__tests__settings_with_effort_level_snapshot.snap  loom_core__agent__claude_code__tests__settings_with_env_snapshot.snap  loom_core__agent__claude_code__tests__settings_with_mcp_servers_snapshot.snap  loom_core__agent__claude_code__tests__settings_with_model_snapshot.snap  loom_core__agent__claude_code__tests__settings_with_permissions_snapshot.snap  loom_core__agent__claude_code__tests__settings_with_plugins_snapshot.snap  loom_core__agent__claude_code__tests__settings_with_preset_snapshot.snap  loom_core__agent__claude_code__tests__settings_with_sandbox_snapshot.snap  loom_core__agent__claude_code__tests__settings_with_unix_sockets_snapshot.snap
crates/loom-core/src/config/: init.rs  mod.rs
crates/loom-core/src/git/: command.rs  error.rs  mod.rs  repo.rs
crates/loom-core/src/manifest/: mod.rs  state.rs  sync.rs  workspace.rs
crates/loom-core/src/registry/: mod.rs  url.rs
crates/loom-core/src/sync/: mod.rs  open.rs  save.rs
crates/loom-core/src/tui/: app.rs  mod.rs  views.rs
crates/loom-core/src/workspace/: add.rs  down.rs  editor.rs  exec.rs  list.rs  mod.rs  new.rs  remove.rs  reset.rs  shell.rs  status.rs
crates/loom-core/src/workspace/snapshots/: loom_core__workspace__list__tests__list_json_snapshot.snap  loom_core__workspace__status__tests__status_json_snapshot.snap
crates/loom-core/tests/: integration_test.rs
crates/loom-core/tests/helpers/: mod.rs
docs/: USER-GUIDE.md  commit-conventions.md  reviewer-guidelines.md
docs/learnings/security-issues/: input-validation-string-ops-bypass-edge-cases.md
src/: main.rs
src/cli/: mod.rs
src/sync/: mod.rs
