[package]
name = "loom"
version = "0.1.0"
edition = "2024"
description = "Linked Orchestration Of Multirepos — CLI/TUI for managing git worktrees across tightly-coupled repositories"
license = "MIT"
repository = "https://github.com/subotic/loom"
authors = ["Ivan Subotic <ivan.subotic@gmail.com>"]
keywords = ["git", "worktree", "monorepo", "tui", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# TUI
ratatui = "0.30"
crossterm = "0.29"

# Async
tokio = { version = "1.49", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.0"

# Error handling
anyhow = "1.0"

# Filesystem & paths
directories = "6.0"

# Time
chrono = { version = "0.4", features = ["serde"] }
