[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/subotic/loom"
authors = ["Ivan Subotic <ivan.subotic@gmail.com>"]

[workspace.dependencies]
# Internal
loom-core = { path = "crates/loom-core" }

# CLI
clap = { version = "4.5", features = ["derive"] }

# TUI
ratatui = "0.30"
crossterm = "0.29"

# Async
tokio = { version = "1.49", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.0"

# Error handling
anyhow = "1.0"

# Filesystem & paths
directories = "6.0"

# Time
chrono = { version = "0.4", features = ["serde"] }
