[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/subotic/loom"
authors = ["Ivan Subotic <ivan.subotic@gmail.com>"]

[workspace.dependencies]
# Internal
loom-core = { path = "crates/loom-core" }

# CLI
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"

# TUI
ratatui = { version = "0.30", features = ["crossterm"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
toml_edit = "0.22"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Filesystem & paths
dirs = "6.0"
shellexpand = "3.1"
tempfile = "3.15"

# Interactive prompts
dialoguer = "0.11"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Testing (used as dev-dependency in crates)
insta = "1.42"
