[package]
name = "loom-core"
description = "Core library for LOOM — config, workspace, git, sync, agent, and TUI logic"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
chrono.workspace = true
fastrand.workspace = true
dialoguer.workspace = true
dirs.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
shellexpand.workspace = true
tempfile.workspace = true
thiserror.workspace = true
toml.workspace = true
toml_edit.workspace = true
tracing.workspace = true

# Self-update
self_update.workspace = true

[dev-dependencies]
insta.workspace = true
